tests/cases/attributes/errors/attribute-test-param.ari
@test
fn bad(value: i64) {
  assert(value == 0);
}
